fix(web): image layout problem

--- a/ios/webview/css/output.scss
+++ b/ios/webview/css/output.scss
@@ -2250,6 +2250,7 @@ html.onboarding.onboarding-2:not(.dark-background) body {
       &:not(.specificity-breaker):not(.img-small):not(.img-tiny) {
         width: 100% !important;
         left: 0 !important;
+        margin-right: 0 !important;
       }
     }
     
