--- a/webview/web-overrides.scss
+++ b/webview/web-overrides.scss
@@ -135,6 +135,7 @@
       &:not(.specificity-breaker):not(.img-small):not(.img-tiny) {
         width: 100% !important;
         left: 0 !important;
+        margin-right: 0 !important;
       }
     }
     
